--- a/index.html
+++ b/index.html
@@ -2,44 +2,21 @@
 <html lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>化學棍球圖 App</title>
+<title>化學棍球圖互動版</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div id="controls">
-    <h2>添加原子</h2>
-    <label>元素：
-        <select id="element-select">
-            <option value="C">C</option>
-            <option value="H">H</option>
-            <option value="O">O</option>
-            <option value="N">N</option>
-            <option value="Cl">Cl</option>
-        </select>
-    </label>
-    <button id="add-atom">加入原子</button>
-
-    <h2>連接鍵</h2>
-    <label>左邊鍵：
-        <select id="left-bond">
-            <option value="0">無</option>
-            <option value="1">單鍵</option>
-            <option value="2">雙鍵</option>
-            <option value="3">三鍵</option>
-        </select>
-    </label>
-    <label>右邊鍵：
-        <select id="right-bond">
-            <option value="0">無</option>
-            <option value="1">單鍵</option>
-            <option value="2">雙鍵</option>
-            <option value="3">三鍵</option>
-        </select>
-    </label>
-    <label>鍵角：
-        <input type="number" id="bond-angle" value="109.5" step="1"> 度
-    </label>
-    <button id="connect-bond">連接原子</button>
+  <h3>加入原子</h3>
+  <select id="element-select">
+    <option value="C">C</option>
+    <option value="H">H</option>
+    <option value="O">O</option>
+    <option value="N">N</option>
+    <option value="Cl">Cl</option>
+  </select>
+  <button id="add-atom">加入</button>
+  <div id="bond-controls"></div>
 </div>
 <div id="container"></div>
 
