--- a/index.html
+++ b/index.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>高中有機化合物棍球圖</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>高中有機化合物棍球圖</title>
+<link rel="stylesheet" href="style.css">
+<script src="https://3Dmol.csb.pitt.edu/build/3Dmol-min.js"></script>
 </head>
 <body>
-  <h1>高中有機化合物棍球圖 App</h1>
-  <div class="container">
+    <h1>高中有機化合物棍球圖</h1>
     <div class="controls">
-      <label for="compoundSelect">選擇化合物：</label>
-      <select id="compoundSelect">
-        <option value="">-- 請選擇 --</option>
-      </select>
-
-      <div id="info">
-        <p><strong>實驗式:</strong> <span id="empiricalFormula"></span></p>
-        <p><strong>分子式:</strong> <span id="molecularFormula"></span></p>
-        <p><strong>結構式:</strong> <span id="structuralFormula"></span></p>
-        <p><strong>示性式:</strong> <span id="condensedFormula"></span></p>
-      </div>
+        <label for="compoundSelect">選擇化合物：</label>
+        <select id="compoundSelect">
+            <option value="">-- 請選擇 --</option>
+        </select>
     </div>
-
-    <div id="viewer" class="viewer"></div>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/controls/OrbitControls.js"></script>
-  <script src="script.js"></script>
+    <div class="info">
+        <p id="formula"></p>
+        <p id="molecular"></p>
+        <p id="structural"></p>
+        <p id="condensed"></p>
+    </div>
+    <div id="viewer" style="width:100%; height:500px; position: relative;"></div>
+    <script src="script.js"></script>
 </body>
 </html>
